Add CSV export and individual plot downloads to AUG comparison section

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -1402,7 +1402,8 @@
     "        row = {\n",
     "            'Strategy': strategy_name,\n",
     "            'Config': result_dict['config'],\n",
-    "            'Description': result_dict['description']\n",
+    "            'Description': result_dict['description'],\n",
+    "            'Training_Time_min': result_dict.get('training_time_min', 0)\n",
     "        }\n",
     "        # Add metrics\n",
     "        for metric, value in result_dict['results'].items():\n",
@@ -1418,7 +1419,7 @@
     "    \n",
     "    # Calculate deltas\n",
     "    for col in aug_df.columns:\n",
-    "        if col not in ['Strategy', 'Config', 'Description'] and aug_df[col].dtype in ['float64', 'int64']:\n",
+    "        if col not in ['Strategy', 'Config', 'Description', 'Training_Time_min'] and aug_df[col].dtype in ['float64', 'int64']:\n",
     "            baseline_val = aug_df.loc[baseline_idx, col]\n",
     "            aug_df[f'{col}_delta'] = ((aug_df[col] - baseline_val) / baseline_val * 100).round(2)\n",
     "\n",
@@ -1426,13 +1427,20 @@
     "if 'mean_average_precision' in aug_df.columns:\n",
     "    aug_df = aug_df.sort_values('mean_average_precision', ascending=False)\n",
     "\n",
+    "# Export to CSV\n",
+    "import os\n",
+    "csv_path = 'outputs/augmentation_comparison.csv'\n",
+    "os.makedirs('outputs', exist_ok=True)\n",
+    "aug_df.to_csv(csv_path, index=False)\n",
+    "print(f\"✅ CSV exported to: {csv_path}\\n\")\n",
+    "\n",
     "# Display comparison\n",
     "print(\"\\n\" + \"=\"*80)\n",
     "print(\"📊 AUGMENTATION STRATEGIES COMPARISON\")\n",
     "print(\"=\"*80 + \"\\n\")\n",
     "\n",
     "# Key metrics to display\n",
-    "key_metrics = ['micro_f1', 'mean_average_precision', 'recall_at_5', 'recall_at_10']\n",
+    "key_metrics = ['micro_f1', 'mean_average_precision', 'recall_at_5', 'recall_at_10', 'Training_Time_min']\n",
     "\n",
     "for idx, row in aug_df.iterrows():\n",
     "    print(f\"\\n{'='*80}\")\n",
@@ -1449,14 +1457,24 @@
     "            if delta_col in row and pd.notna(row[delta_col]):\n",
     "                delta = row[delta_col]\n",
     "                delta_str = f\" ({'+' if delta > 0 else ''}{delta:.2f}%)\"\n",
-    "                print(f\"  {metric}: {value:.4f}{delta_str}\")\n",
+    "                if metric == 'Training_Time_min':\n",
+    "                    print(f\"  {metric}: {value:.2f} min\")\n",
+    "                else:\n",
+    "                    print(f\"  {metric}: {value:.4f}{delta_str}\")\n",
     "            else:\n",
-    "                print(f\"  {metric}: {value:.4f}\")\n",
+    "                if metric == 'Training_Time_min':\n",
+    "                    print(f\"  {metric}: {value:.2f} min\")\n",
+    "                else:\n",
+    "                    print(f\"  {metric}: {value:.4f}\")\n",
     "\n",
     "# Create visualization\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "if len(aug_df) > 0:\n",
+    "    # Create output directory for plots\n",
+    "    plots_dir = 'outputs/augmentation_plots'\n",
+    "    os.makedirs(plots_dir, exist_ok=True)\n",
+    "    \n",
     "    fig, axes = plt.subplots(2, 2, figsize=(16, 12))\n",
     "    \n",
     "    # Plot 1: Micro F1\n",
@@ -1529,7 +1547,96 @@
     "            ax.grid(axis='y', alpha=0.3)\n",
     "    \n",
     "    plt.tight_layout()\n",
+    "    \n",
+    "    # Save combined plot\n",
+    "    combined_plot_path = f'{plots_dir}/augmentation_comparison_all.png'\n",
+    "    plt.savefig(combined_plot_path, dpi=300, bbox_inches='tight')\n",
+    "    print(f\"✅ Combined plot saved: {combined_plot_path}\")\n",
     "    plt.show()\n",
+    "    \n",
+    "    # Save individual plots\n",
+    "    print(\"\\n📊 Saving individual plots...\")\n",
+    "    \n",
+    "    # Individual Plot 1: Micro F1\n",
+    "    fig1, ax1 = plt.subplots(figsize=(10, 6))\n",
+    "    bars = ax1.bar(range(len(strategies)), micro_f1, color=['gray' if 'baseline' in s else 'skyblue' for s in strategies])\n",
+    "    ax1.set_xticks(range(len(strategies)))\n",
+    "    ax1.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "    ax1.set_ylabel('Micro F1', fontsize=12)\n",
+    "    ax1.set_title('Augmentation Strategies: Micro F1 Comparison', fontsize=14, fontweight='bold')\n",
+    "    ax1.grid(axis='y', alpha=0.3)\n",
+    "    for i, (bar, val) in enumerate(zip(bars, micro_f1)):\n",
+    "        ax1.text(bar.get_x() + bar.get_width()/2, bar.get_height() + 0.005, \n",
+    "                f'{val:.4f}', ha='center', va='bottom', fontsize=10)\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f'{plots_dir}/micro_f1_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "    plt.close()\n",
+    "    print(f\"  ✓ Micro F1 plot saved\")\n",
+    "    \n",
+    "    # Individual Plot 2: mAP\n",
+    "    if 'mean_average_precision' in aug_df.columns:\n",
+    "        fig2, ax2 = plt.subplots(figsize=(10, 6))\n",
+    "        map_values = aug_df['mean_average_precision'].tolist()\n",
+    "        bars = ax2.bar(range(len(strategies)), map_values, color=['gray' if 'baseline' in s else 'lightcoral' for s in strategies])\n",
+    "        ax2.set_xticks(range(len(strategies)))\n",
+    "        ax2.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "        ax2.set_ylabel('Mean Average Precision (mAP)', fontsize=12)\n",
+    "        ax2.set_title('Augmentation Strategies: mAP Comparison', fontsize=14, fontweight='bold')\n",
+    "        ax2.grid(axis='y', alpha=0.3)\n",
+    "        for i, (bar, val) in enumerate(zip(bars, map_values)):\n",
+    "            ax2.text(bar.get_x() + bar.get_width()/2, bar.get_height() + 0.005, \n",
+    "                    f'{val:.4f}', ha='center', va='bottom', fontsize=10)\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{plots_dir}/map_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        print(f\"  ✓ mAP plot saved\")\n",
+    "    \n",
+    "    # Individual Plot 3: Recall@K\n",
+    "    if 'recall_at_5' in aug_df.columns and 'recall_at_10' in aug_df.columns:\n",
+    "        fig3, ax3 = plt.subplots(figsize=(10, 6))\n",
+    "        x = np.arange(len(strategies))\n",
+    "        width = 0.35\n",
+    "        r5 = aug_df['recall_at_5'].tolist()\n",
+    "        r10 = aug_df['recall_at_10'].tolist()\n",
+    "        ax3.bar(x - width/2, r5, width, label='Recall@5', color='lightgreen')\n",
+    "        ax3.bar(x + width/2, r10, width, label='Recall@10', color='darkgreen')\n",
+    "        ax3.set_xticks(x)\n",
+    "        ax3.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "        ax3.set_ylabel('Recall', fontsize=12)\n",
+    "        ax3.set_title('Augmentation Strategies: Recall@K Comparison', fontsize=14, fontweight='bold')\n",
+    "        ax3.legend(fontsize=11)\n",
+    "        ax3.grid(axis='y', alpha=0.3)\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{plots_dir}/recall_k_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        print(f\"  ✓ Recall@K plot saved\")\n",
+    "    \n",
+    "    # Individual Plot 4: Improvement over baseline\n",
+    "    if 'micro_f1_delta' in aug_df.columns:\n",
+    "        aug_df_filtered = aug_df[aug_df['Strategy'] != 'aug_baseline']\n",
+    "        if len(aug_df_filtered) > 0:\n",
+    "            fig4, ax4 = plt.subplots(figsize=(10, 6))\n",
+    "            strategies_filtered = aug_df_filtered['Strategy'].tolist()\n",
+    "            f1_delta = aug_df_filtered['micro_f1_delta'].tolist()\n",
+    "            map_delta = aug_df_filtered['mean_average_precision_delta'].tolist() if 'mean_average_precision_delta' in aug_df_filtered.columns else [0] * len(strategies_filtered)\n",
+    "            \n",
+    "            x = np.arange(len(strategies_filtered))\n",
+    "            width = 0.35\n",
+    "            ax4.bar(x - width/2, f1_delta, width, label='Micro F1 Δ%', color='skyblue')\n",
+    "            ax4.bar(x + width/2, map_delta, width, label='mAP Δ%', color='lightcoral')\n",
+    "            ax4.set_xticks(x)\n",
+    "            ax4.set_xticklabels(strategies_filtered, rotation=45, ha='right')\n",
+    "            ax4.set_ylabel('Improvement over Baseline (%)', fontsize=12)\n",
+    "            ax4.set_title('Augmentation Strategies: Relative Improvement', fontsize=14, fontweight='bold')\n",
+    "            ax4.axhline(y=0, color='black', linestyle='--', linewidth=0.8)\n",
+    "            ax4.legend(fontsize=11)\n",
+    "            ax4.grid(axis='y', alpha=0.3)\n",
+    "            plt.tight_layout()\n",
+    "            plt.savefig(f'{plots_dir}/improvement_over_baseline.png', dpi=300, bbox_inches='tight')\n",
+    "            plt.close()\n",
+    "            print(f\"  ✓ Improvement plot saved\")\n",
+    "    \n",
+    "    print(f\"\\n✅ All plots saved to: {plots_dir}/\")\n",
     "\n",
     "# Summary recommendation\n",
     "print(\"\\n\" + \"=\"*80)\n",
@@ -1554,6 +1661,18 @@
     "            print(f\"\\n   Improvement over baseline:\")\n",
     "            print(f\"   - mAP: +{map_delta:.2f}%\")\n",
     "            print(f\"   - Micro F1: +{f1_delta:.2f}%\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"📁 EXPORTED FILES:\")\n",
+    "print(\"=\"*80)\n",
+    "print(f\"  • CSV: {csv_path}\")\n",
+    "print(f\"  • Plots: {plots_dir}/\")\n",
+    "print(\"    - augmentation_comparison_all.png (combined)\")\n",
+    "print(\"    - micro_f1_comparison.png\")\n",
+    "print(\"    - map_comparison.png\")\n",
+    "print(\"    - recall_k_comparison.png\")\n",
+    "print(\"    - improvement_over_baseline.png\")\n",
+    "print(\"=\"*80)\n",
     "\n",
     "print(\"\\n\")"
    ]
