Remove delta columns from CSV export, keep only for display

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -1413,26 +1413,27 @@
     "\n",
     "aug_df = pd.DataFrame(aug_comparison)\n",
     "\n",
-    "# Calculate improvements over baseline\n",
-    "if len(aug_df) > 0 and 'aug_baseline' in aug_df['Strategy'].values:\n",
-    "    baseline_idx = aug_df[aug_df['Strategy'] == 'aug_baseline'].index[0]\n",
-    "    \n",
-    "    # Calculate deltas\n",
-    "    for col in aug_df.columns:\n",
-    "        if col not in ['Strategy', 'Config', 'Description', 'Training_Time_min'] and aug_df[col].dtype in ['float64', 'int64']:\n",
-    "            baseline_val = aug_df.loc[baseline_idx, col]\n",
-    "            aug_df[f'{col}_delta'] = ((aug_df[col] - baseline_val) / baseline_val * 100).round(2)\n",
-    "\n",
     "# Sort by mAP (descending)\n",
     "if 'mean_average_precision' in aug_df.columns:\n",
     "    aug_df = aug_df.sort_values('mean_average_precision', ascending=False)\n",
     "\n",
-    "# Export to CSV\n",
+    "# Export to CSV (without delta columns)\n",
     "import os\n",
     "csv_path = 'outputs/augmentation_comparison.csv'\n",
     "os.makedirs('outputs', exist_ok=True)\n",
     "aug_df.to_csv(csv_path, index=False)\n",
     "print(f\"✅ CSV exported to: {csv_path}\\n\")\n",
+    "\n",
+    "# Calculate improvements over baseline (for display only, not in CSV)\n",
+    "aug_df_display = aug_df.copy()\n",
+    "if len(aug_df_display) > 0 and 'aug_baseline' in aug_df_display['Strategy'].values:\n",
+    "    baseline_idx = aug_df_display[aug_df_display['Strategy'] == 'aug_baseline'].index[0]\n",
+    "    \n",
+    "    # Calculate deltas for display\n",
+    "    for col in aug_df_display.columns:\n",
+    "        if col not in ['Strategy', 'Config', 'Description', 'Training_Time_min'] and aug_df_display[col].dtype in ['float64', 'int64']:\n",
+    "            baseline_val = aug_df_display.loc[baseline_idx, col]\n",
+    "            aug_df_display[f'{col}_delta'] = ((aug_df_display[col] - baseline_val) / baseline_val * 100).round(2)\n",
     "\n",
     "# Display comparison\n",
     "print(\"\\n\" + \"=\"*80)\n",
@@ -1442,7 +1443,7 @@
     "# Key metrics to display\n",
     "key_metrics = ['micro_f1', 'mean_average_precision', 'recall_at_5', 'recall_at_10', 'Training_Time_min']\n",
     "\n",
-    "for idx, row in aug_df.iterrows():\n",
+    "for idx, row in aug_df_display.iterrows():\n",
     "    print(f\"\\n{'='*80}\")\n",
     "    print(f\"🎯 {row['Strategy'].upper()}\")\n",
     "    print(f\"{'='*80}\")\n",
@@ -1467,7 +1468,7 @@
     "                else:\n",
     "                    print(f\"  {metric}: {value:.4f}\")\n",
     "\n",
-    "# Create visualization\n",
+    "# Create visualization (use original aug_df without deltas)\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "if len(aug_df) > 0:\n",
@@ -1524,11 +1525,11 @@
     "        ax.legend()\n",
     "        ax.grid(axis='y', alpha=0.3)\n",
     "    \n",
-    "    # Plot 4: Improvement over baseline (%)\n",
+    "    # Plot 4: Improvement over baseline (%) - use display dataframe with deltas\n",
     "    ax = axes[1, 1]\n",
-    "    if 'micro_f1_delta' in aug_df.columns:\n",
+    "    if 'micro_f1_delta' in aug_df_display.columns:\n",
     "        # Filter out baseline\n",
-    "        aug_df_filtered = aug_df[aug_df['Strategy'] != 'aug_baseline']\n",
+    "        aug_df_filtered = aug_df_display[aug_df_display['Strategy'] != 'aug_baseline']\n",
     "        if len(aug_df_filtered) > 0:\n",
     "            strategies_filtered = aug_df_filtered['Strategy'].tolist()\n",
     "            f1_delta = aug_df_filtered['micro_f1_delta'].tolist()\n",
@@ -1612,8 +1613,8 @@
     "        print(f\"  ✓ Recall@K plot saved\")\n",
     "    \n",
     "    # Individual Plot 4: Improvement over baseline\n",
-    "    if 'micro_f1_delta' in aug_df.columns:\n",
-    "        aug_df_filtered = aug_df[aug_df['Strategy'] != 'aug_baseline']\n",
+    "    if 'micro_f1_delta' in aug_df_display.columns:\n",
+    "        aug_df_filtered = aug_df_display[aug_df_display['Strategy'] != 'aug_baseline']\n",
     "        if len(aug_df_filtered) > 0:\n",
     "            fig4, ax4 = plt.subplots(figsize=(10, 6))\n",
     "            strategies_filtered = aug_df_filtered['Strategy'].tolist()\n",
@@ -1645,19 +1646,25 @@
     "\n",
     "if len(aug_df) > 1:\n",
     "    # Exclude baseline\n",
-    "    aug_df_filtered = aug_df[aug_df['Strategy'] != 'aug_baseline']\n",
-    "    if len(aug_df_filtered) > 0:\n",
-    "        best_strategy = aug_df_filtered.iloc[0]['Strategy']\n",
-    "        best_map = aug_df_filtered.iloc[0]['mean_average_precision'] if 'mean_average_precision' in aug_df_filtered.columns else 0\n",
-    "        best_f1 = aug_df_filtered.iloc[0]['micro_f1']\n",
+    "    aug_df_filtered_rec = aug_df[aug_df['Strategy'] != 'aug_baseline']\n",
+    "    if len(aug_df_filtered_rec) > 0:\n",
+    "        best_strategy = aug_df_filtered_rec.iloc[0]['Strategy']\n",
+    "        best_map = aug_df_filtered_rec.iloc[0]['mean_average_precision'] if 'mean_average_precision' in aug_df_filtered_rec.columns else 0\n",
+    "        best_f1 = aug_df_filtered_rec.iloc[0]['micro_f1']\n",
     "        \n",
     "        print(f\"\\n✅ Best performing strategy: {best_strategy.upper()}\")\n",
     "        print(f\"   - mAP: {best_map:.4f}\")\n",
     "        print(f\"   - Micro F1: {best_f1:.4f}\")\n",
     "        \n",
-    "        if 'mean_average_precision_delta' in aug_df_filtered.columns:\n",
-    "            map_delta = aug_df_filtered.iloc[0]['mean_average_precision_delta']\n",
-    "            f1_delta = aug_df_filtered.iloc[0]['micro_f1_delta']\n",
+    "        # Calculate deltas for recommendation\n",
+    "        if 'aug_baseline' in aug_df['Strategy'].values:\n",
+    "            baseline_data = aug_df[aug_df['Strategy'] == 'aug_baseline'].iloc[0]\n",
+    "            baseline_map = baseline_data['mean_average_precision'] if 'mean_average_precision' in baseline_data else 0\n",
+    "            baseline_f1 = baseline_data['micro_f1']\n",
+    "            \n",
+    "            map_delta = ((best_map - baseline_map) / baseline_map * 100) if baseline_map > 0 else 0\n",
+    "            f1_delta = ((best_f1 - baseline_f1) / baseline_f1 * 100) if baseline_f1 > 0 else 0\n",
+    "            \n",
     "            print(f\"\\n   Improvement over baseline:\")\n",
     "            print(f\"   - mAP: +{map_delta:.2f}%\")\n",
     "            print(f\"   - Micro F1: +{f1_delta:.2f}%\")\n",
