Add CSV export and individual plot downloads to Part B Section 1 comparison

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -2165,6 +2165,7 @@
     "        results = data['results']\n",
     "        loss_comparison_data.append({\n",
     "            'Strategy': data['config'],\n",
+    "            'Training_Time_min': data.get('training_time_min', 0),\n",
     "            'mAP': results.get('mean_average_precision', 0),\n",
     "            'Micro_F1': results.get('micro_f1', 0),\n",
     "            'Recall@5': results.get('recall_at_5', 0),\n",
@@ -2178,6 +2179,13 @@
     "if len(loss_comparison_data) > 0:\n",
     "    df_loss_comparison = pd.DataFrame(loss_comparison_data)\n",
     "    \n",
+    "    # Export CSV\n",
+    "    import os\n",
+    "    loss_csv_path = 'outputs/loss_function_comparison.csv'\n",
+    "    os.makedirs('outputs', exist_ok=True)\n",
+    "    df_loss_comparison.to_csv(loss_csv_path, index=False)\n",
+    "    print(f\"✅ CSV exported to: {loss_csv_path}\\n\")\n",
+    "    \n",
     "    # Display comparison table\n",
     "    print(\"\\n📋 Loss Function Performance Comparison:\")\n",
     "    print(df_loss_comparison.to_string(index=False))\n",
@@ -2188,6 +2196,10 @@
     "    print(f\"   Best Micro F1: {df_loss_comparison.loc[df_loss_comparison['Micro_F1'].idxmax(), 'Strategy']} ({df_loss_comparison['Micro_F1'].max():.4f})\")\n",
     "    print(f\"   Best Recall@5: {df_loss_comparison.loc[df_loss_comparison['Recall@5'].idxmax(), 'Strategy']} ({df_loss_comparison['Recall@5'].max():.4f})\")\n",
     "    print(f\"   Lowest Hamming Loss: {df_loss_comparison.loc[df_loss_comparison['Hamming_Loss'].idxmin(), 'Strategy']} ({df_loss_comparison['Hamming_Loss'].min():.4f})\")\n",
+    "    \n",
+    "    # Create output directory for plots\n",
+    "    loss_plots_dir = 'outputs/loss_function_plots'\n",
+    "    os.makedirs(loss_plots_dir, exist_ok=True)\n",
     "    \n",
     "    # Create visualization\n",
     "    fig, axes = plt.subplots(2, 2, figsize=(16, 12))\n",
@@ -2242,27 +2254,92 @@
     "    \n",
     "    plt.tight_layout()\n",
     "    \n",
-    "    # Save plots\n",
-    "    timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-    "    plot_file = OUTPUT_DIR / f'loss_function_comparison_{timestamp}.png'\n",
-    "    plt.savefig(plot_file, dpi=300, bbox_inches='tight')\n",
+    "    # Save combined plot\n",
+    "    combined_plot_path = f'{loss_plots_dir}/loss_function_comparison_all.png'\n",
+    "    plt.savefig(combined_plot_path, dpi=300, bbox_inches='tight')\n",
+    "    print(f\"\\n✅ Combined plot saved: {combined_plot_path}\")\n",
     "    plt.show()\n",
     "    \n",
-    "    # Save CSV\n",
-    "    csv_file = OUTPUT_DIR / f'loss_function_comparison_{timestamp}.csv'\n",
-    "    df_loss_comparison.to_csv(csv_file, index=False)\n",
+    "    # Save individual plots\n",
+    "    print(\"\\n📊 Saving individual plots...\")\n",
     "    \n",
-    "    print(f\"\\n✅ Comparison plot saved: {plot_file}\")\n",
-    "    print(f\"✅ Comparison CSV saved: {csv_file}\")\n",
+    "    # Individual Plot 1: mAP\n",
+    "    fig1, ax1 = plt.subplots(figsize=(10, 6))\n",
+    "    ax1.bar(range(len(df_loss_comparison)), df_loss_comparison['mAP'], color=['#1f77b4', '#ff7f0e', '#2ca02c', '#d62728'], alpha=0.8)\n",
+    "    ax1.set_xticks(range(len(df_loss_comparison)))\n",
+    "    ax1.set_xticklabels(df_loss_comparison['Strategy'], rotation=45, ha='right')\n",
+    "    ax1.set_ylabel('Mean Average Precision (mAP)', fontsize=12)\n",
+    "    ax1.set_title('Loss Functions: mAP Comparison', fontsize=14, fontweight='bold')\n",
+    "    ax1.grid(axis='y', alpha=0.3)\n",
+    "    for i, v in enumerate(df_loss_comparison['mAP']):\n",
+    "        ax1.text(i, v + 0.01, f'{v:.3f}', ha='center', fontsize=10)\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f'{loss_plots_dir}/map_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "    plt.close()\n",
+    "    print(f\"  ✓ mAP plot saved\")\n",
     "    \n",
-    "    # Download files if on Colab\n",
-    "    try:\n",
-    "        from google.colab import files\n",
-    "        files.download(str(plot_file))\n",
-    "        files.download(str(csv_file))\n",
-    "        print(\"✅ Files downloaded\")\n",
-    "    except ImportError:\n",
-    "        pass\n",
+    "    # Individual Plot 2: Micro F1\n",
+    "    fig2, ax2 = plt.subplots(figsize=(10, 6))\n",
+    "    ax2.bar(range(len(df_loss_comparison)), df_loss_comparison['Micro_F1'], color=['#1f77b4', '#ff7f0e', '#2ca02c', '#d62728'], alpha=0.8)\n",
+    "    ax2.set_xticks(range(len(df_loss_comparison)))\n",
+    "    ax2.set_xticklabels(df_loss_comparison['Strategy'], rotation=45, ha='right')\n",
+    "    ax2.set_ylabel('Micro F1 Score', fontsize=12)\n",
+    "    ax2.set_title('Loss Functions: Micro F1 Comparison', fontsize=14, fontweight='bold')\n",
+    "    ax2.grid(axis='y', alpha=0.3)\n",
+    "    for i, v in enumerate(df_loss_comparison['Micro_F1']):\n",
+    "        ax2.text(i, v + 0.01, f'{v:.3f}', ha='center', fontsize=10)\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f'{loss_plots_dir}/micro_f1_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "    plt.close()\n",
+    "    print(f\"  ✓ Micro F1 plot saved\")\n",
+    "    \n",
+    "    # Individual Plot 3: Recall@K\n",
+    "    fig3, ax3 = plt.subplots(figsize=(10, 6))\n",
+    "    x = range(len(df_loss_comparison))\n",
+    "    width = 0.35\n",
+    "    ax3.bar([i - width/2 for i in x], df_loss_comparison['Recall@5'], width, label='Recall@5', alpha=0.8, color='lightgreen')\n",
+    "    ax3.bar([i + width/2 for i in x], df_loss_comparison['Recall@10'], width, label='Recall@10', alpha=0.8, color='darkgreen')\n",
+    "    ax3.set_xticks(x)\n",
+    "    ax3.set_xticklabels(df_loss_comparison['Strategy'], rotation=45, ha='right')\n",
+    "    ax3.set_ylabel('Recall Score', fontsize=12)\n",
+    "    ax3.set_title('Loss Functions: Recall@5 and Recall@10', fontsize=14, fontweight='bold')\n",
+    "    ax3.legend(fontsize=11)\n",
+    "    ax3.grid(axis='y', alpha=0.3)\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f'{loss_plots_dir}/recall_k_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "    plt.close()\n",
+    "    print(f\"  ✓ Recall@K plot saved\")\n",
+    "    \n",
+    "    # Individual Plot 4: Precision vs Recall\n",
+    "    fig4, ax4 = plt.subplots(figsize=(10, 6))\n",
+    "    ax4.scatter(df_loss_comparison['Micro_Recall'], df_loss_comparison['Micro_Precision'], \n",
+    "               s=200, c=['#1f77b4', '#ff7f0e', '#2ca02c', '#d62728'], alpha=0.6)\n",
+    "    for i, strategy in enumerate(df_loss_comparison['Strategy']):\n",
+    "        ax4.annotate(strategy, \n",
+    "                   (df_loss_comparison.loc[i, 'Micro_Recall'], df_loss_comparison.loc[i, 'Micro_Precision']),\n",
+    "                   xytext=(5, 5), textcoords='offset points', fontsize=10)\n",
+    "    ax4.set_xlabel('Micro Recall', fontsize=12)\n",
+    "    ax4.set_ylabel('Micro Precision', fontsize=12)\n",
+    "    ax4.set_title('Loss Functions: Precision vs Recall', fontsize=14, fontweight='bold')\n",
+    "    ax4.grid(True, alpha=0.3)\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f'{loss_plots_dir}/precision_recall_scatter.png', dpi=300, bbox_inches='tight')\n",
+    "    plt.close()\n",
+    "    print(f\"  ✓ Precision-Recall scatter plot saved\")\n",
+    "    \n",
+    "    print(f\"\\n✅ All plots saved to: {loss_plots_dir}/\")\n",
+    "    \n",
+    "    print(\"\\n\" + \"=\"*80)\n",
+    "    print(\"📁 EXPORTED FILES:\")\n",
+    "    print(\"=\"*80)\n",
+    "    print(f\"  • CSV: {loss_csv_path}\")\n",
+    "    print(f\"  • Plots: {loss_plots_dir}/\")\n",
+    "    print(\"    - loss_function_comparison_all.png (combined)\")\n",
+    "    print(\"    - map_comparison.png\")\n",
+    "    print(\"    - micro_f1_comparison.png\")\n",
+    "    print(\"    - recall_k_comparison.png\")\n",
+    "    print(\"    - precision_recall_scatter.png\")\n",
+    "    print(\"=\"*80)\n",
     "    \n",
     "else:\n",
     "    print(\"⚠️  No loss function results found. Please run strategies B-1 to B-4 first.\")\n",
