Add CSV export and individual plot downloads to Part B Section 2 (Top-K Analysis)

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -2504,10 +2504,15 @@
     "print(df_topk.to_string(index=False))\n",
     "\n",
     "# Save CSV\n",
-    "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-    "topk_csv = OUTPUT_DIR / f'topk_analysis_{timestamp}.csv'\n",
-    "df_topk.to_csv(topk_csv, index=False)\n",
-    "print(f\"\\n✅ CSV saved: {topk_csv}\")\n",
+    "import os\n",
+    "topk_csv_path = 'outputs/topk_analysis.csv'\n",
+    "os.makedirs('outputs', exist_ok=True)\n",
+    "df_topk.to_csv(topk_csv_path, index=False)\n",
+    "print(f\"\\n✅ CSV saved: {topk_csv_path}\")\n",
+    "\n",
+    "# Create output directory for plots\n",
+    "topk_plots_dir = 'outputs/topk_analysis_plots'\n",
+    "os.makedirs(topk_plots_dir, exist_ok=True)\n",
     "\n",
     "# Create visualization\n",
     "fig, axes = plt.subplots(2, 2, figsize=(16, 12))\n",
@@ -2559,10 +2564,79 @@
     "ax.grid(axis='y', alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(OUTPUT_DIR / f'topk_analysis_{timestamp}.png', dpi=300, bbox_inches='tight')\n",
+    "\n",
+    "# Save combined plot\n",
+    "combined_plot_path = f'{topk_plots_dir}/topk_analysis_all.png'\n",
+    "plt.savefig(combined_plot_path, dpi=300, bbox_inches='tight')\n",
+    "print(f\"\\n✅ Combined plot saved: {combined_plot_path}\")\n",
     "plt.show()\n",
     "\n",
-    "print(f\"\\n✅ Histogram saved: {OUTPUT_DIR / f'topk_analysis_{timestamp}.png'}\")\n",
+    "# Save individual plots\n",
+    "print(\"\\n📊 Saving individual plots...\")\n",
+    "\n",
+    "# Individual Plot 1: F1 Score vs K\n",
+    "fig1, ax1 = plt.subplots(figsize=(10, 6))\n",
+    "ax1.plot(df_topk['K'], df_topk['Micro F1'], marker='o', linewidth=2, markersize=8, label='Micro F1', color='blue')\n",
+    "ax1.set_xlabel('Number of Labels (K)', fontsize=12)\n",
+    "ax1.set_ylabel('Micro F1 Score', fontsize=12)\n",
+    "ax1.set_title('Top-K Analysis: Model Performance vs Label Count', fontsize=14, fontweight='bold')\n",
+    "ax1.grid(True, alpha=0.3)\n",
+    "ax1.legend(fontsize=11)\n",
+    "ax1.invert_xaxis()\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f'{topk_plots_dir}/f1_vs_k.png', dpi=300, bbox_inches='tight')\n",
+    "plt.close()\n",
+    "print(f\"  ✓ F1 vs K plot saved\")\n",
+    "\n",
+    "# Individual Plot 2: Hamming Loss vs K\n",
+    "fig2, ax2 = plt.subplots(figsize=(10, 6))\n",
+    "ax2.plot(df_topk['K'], df_topk['Hamming Loss'], marker='s', linewidth=2, markersize=8, label='Hamming Loss', color='red')\n",
+    "ax2.set_xlabel('Number of Labels (K)', fontsize=12)\n",
+    "ax2.set_ylabel('Hamming Loss (lower is better)', fontsize=12)\n",
+    "ax2.set_title('Top-K Analysis: Hamming Loss vs Label Count', fontsize=14, fontweight='bold')\n",
+    "ax2.grid(True, alpha=0.3)\n",
+    "ax2.legend(fontsize=11)\n",
+    "ax2.invert_xaxis()\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f'{topk_plots_dir}/hamming_loss_vs_k.png', dpi=300, bbox_inches='tight')\n",
+    "plt.close()\n",
+    "print(f\"  ✓ Hamming Loss vs K plot saved\")\n",
+    "\n",
+    "# Individual Plot 3: Recall@5 vs K\n",
+    "fig3, ax3 = plt.subplots(figsize=(10, 6))\n",
+    "ax3.bar(range(len(df_topk)), df_topk['Recall@5'], alpha=0.7, color='coral')\n",
+    "ax3.set_xticks(range(len(df_topk)))\n",
+    "ax3.set_xticklabels([f'Top-{k}' for k in df_topk['K']])\n",
+    "ax3.set_ylabel('Recall@5', fontsize=12)\n",
+    "ax3.set_title('Top-K Analysis: Recall@5 by Label Count', fontsize=14, fontweight='bold')\n",
+    "ax3.grid(axis='y', alpha=0.3)\n",
+    "for i, v in enumerate(df_topk['Recall@5']):\n",
+    "    ax3.text(i, v + 0.02, f'{v:.3f}', ha='center', fontsize=10)\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f'{topk_plots_dir}/recall5_vs_k.png', dpi=300, bbox_inches='tight')\n",
+    "plt.close()\n",
+    "print(f\"  ✓ Recall@5 plot saved\")\n",
+    "\n",
+    "# Individual Plot 4: All Metrics Comparison\n",
+    "fig4, ax4 = plt.subplots(figsize=(12, 6))\n",
+    "x = range(len(df_topk))\n",
+    "width = 0.2\n",
+    "ax4.bar([i - width*1.5 for i in x], df_topk['Micro F1'], width, label='F1', alpha=0.8)\n",
+    "ax4.bar([i - width*0.5 for i in x], df_topk['Micro Precision'], width, label='Precision', alpha=0.8)\n",
+    "ax4.bar([i + width*0.5 for i in x], df_topk['Micro Recall'], width, label='Recall', alpha=0.8)\n",
+    "ax4.bar([i + width*1.5 for i in x], df_topk['Recall@5'], width, label='Recall@5', alpha=0.8)\n",
+    "ax4.set_xticks(x)\n",
+    "ax4.set_xticklabels([f'Top-{k}' for k in df_topk['K']])\n",
+    "ax4.set_ylabel('Score', fontsize=12)\n",
+    "ax4.set_title('Top-K Analysis: All Metrics Comparison', fontsize=14, fontweight='bold')\n",
+    "ax4.legend(fontsize=11)\n",
+    "ax4.grid(axis='y', alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f'{topk_plots_dir}/all_metrics_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "plt.close()\n",
+    "print(f\"  ✓ All metrics comparison plot saved\")\n",
+    "\n",
+    "print(f\"\\n✅ All plots saved to: {topk_plots_dir}/\")\n",
     "\n",
     "# Store in all_test_results for comparison\n",
     "for key, data in topk_results.items():\n",
@@ -2571,6 +2645,18 @@
     "        'description': f\"Baseline BCE with {data['k']} most frequent labels\",\n",
     "        'results': data['metrics']\n",
     "    }\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"📁 EXPORTED FILES:\")\n",
+    "print(\"=\"*80)\n",
+    "print(f\"  • CSV: {topk_csv_path}\")\n",
+    "print(f\"  • Plots: {topk_plots_dir}/\")\n",
+    "print(\"    - topk_analysis_all.png (combined)\")\n",
+    "print(\"    - f1_vs_k.png\")\n",
+    "print(\"    - hamming_loss_vs_k.png\")\n",
+    "print(\"    - recall5_vs_k.png\")\n",
+    "print(\"    - all_metrics_comparison.png\")\n",
+    "print(\"=\"*80)\n",
     "\n",
     "print(f\"\\n{'='*60}\")\n",
     "print(f\"✅ TOP-K ANALYSIS COMPLETE\")\n",
