Fix Top-K analysis: Use train_dataset/test_dataset directly instead of data dict

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -2407,12 +2407,12 @@
     "    \n",
     "    # Filter dataset to top-k labels\n",
     "    filtered_train_ds, filtered_label_list, label_mapping = filter_top_k_labels(\n",
-    "        data['train_dataset'], \n",
+    "        train_dataset, \n",
     "        label_names, \n",
     "        k=k\n",
     "    )\n",
     "    filtered_test_ds, _, _ = filter_top_k_labels(\n",
-    "        data['test_dataset'], \n",
+    "        test_dataset, \n",
     "        label_names, \n",
     "        k=k\n",
     "    )\n",
