Fix Hybrid strategies: Use train_dataset directly instead of data dict

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -2735,7 +2735,7 @@
     "# 1. Weighted BCE (best baseline)\n",
     "strategy_config_weighted = get_strategy_config(\n",
     "    strategy_name='weighted',\n",
-    "    train_dataset=data['train_dataset'],\n",
+    "    train_dataset=train_dataset,\n",
     "    num_labels=num_labels,\n",
     "    label_list=label_names\n",
     ")\n",
@@ -2771,28 +2771,26 @@
     "        'name': 'extra_trees',\n",
     "        'display_name': 'ExtraTreesClassifier',\n",
     "        'base_estimator': 'extra_trees',\n",
-    "        'train_func': train_multi_output_classifier,  # Uses MultiOutputClassifier with ExtraTrees\n",
+    "        'train_func': train_multi_output_classifier,\n",
     "        'eval_func': evaluate_multi_output_classifier\n",
     "    },\n",
     "    {\n",
     "        'name': 'random_forest',\n",
     "        'display_name': 'RandomForestClassifier',\n",
     "        'base_estimator': 'random_forest',\n",
-    "        'train_func': train_multi_output_classifier,  # Uses MultiOutputClassifier with RandomForest\n",
+    "        'train_func': train_multi_output_classifier,\n",
     "        'eval_func': evaluate_multi_output_classifier\n",
     "    },\n",
     "    {\n",
     "        'name': 'attentionxml',\n",
     "        'display_name': 'AttentionXML',\n",
-    "        'base_estimator': 'attention_xml',\n",
-    "        'train_func': 'attention_xml',  # Special marker\n",
+    "        'train_func': 'attention_xml',\n",
     "        'eval_func': 'attention_xml'\n",
     "    },\n",
     "    {\n",
     "        'name': 'lightxml',\n",
     "        'display_name': 'LightXML',\n",
-    "        'base_estimator': 'light_xml',\n",
-    "        'train_func': 'light_xml',  # Special marker\n",
+    "        'train_func': 'light_xml',\n",
     "        'eval_func': 'light_xml'\n",
     "    }\n",
     "]\n",
@@ -2913,7 +2911,6 @@
     "                pos_weight=loss_config['pos_weight']\n",
     "            )\n",
     "            \n",
-    "            # Train BERT\n",
     "            training_history = train_model(\n",
     "                model=bert_model,\n",
     "                train_dataloader=train_dataloader,\n",
@@ -2922,24 +2919,32 @@
     "                device=BASE_CONFIG['device']\n",
     "            )\n",
     "            \n",
-    "            # STEP 2: Train classification method on BERT embeddings\n",
-    "            print(f\"\\n🔧 Step 2/3: Training {clf_method['display_name']} on BERT embeddings...\")\n",
-    "            print(f\"   Base Estimator: {clf_method['base_estimator']}\")\n",
+    "            # STEP 2: Train classifier on top of BERT embeddings\n",
+    "            print(f\"\\n🔧 Step 2/3: Training {clf_method['display_name']}...\")\n",
     "            \n",
     "            if clf_method['name'] == 'classifier_chain':\n",
-    "                # Train ClassifierChain\n",
-    "                clf_model = train_classifier_chain(\n",
+    "                # ClassifierChain: Sequential label modeling\n",
+    "                chain_model = train_classifier_chain(\n",
     "                    bert_model=bert_model,\n",
     "                    train_dataloader=train_dataloader,\n",
     "                    device=BASE_CONFIG['device'],\n",
     "                    base_estimator=clf_method['base_estimator'],\n",
     "                    order='random',\n",
-    "                    cv=None,\n",
     "                    random_state=42\n",
     "                )\n",
-    "            else:\n",
-    "                # Train MultiOutputClassifier (or ExtraTrees variant)\n",
-    "                clf_model = train_multi_output_classifier(\n",
+    "                \n",
+    "                print(f\"\\n📊 Step 3/3: Evaluating...\")\n",
+    "                test_results = evaluate_classifier_chain(\n",
+    "                    chain_model=chain_model,\n",
+    "                    bert_model=bert_model,\n",
+    "                    test_dataloader=test_dataloader,\n",
+    "                    device=BASE_CONFIG['device'],\n",
+    "                    label_names=label_names\n",
+    "                )\n",
+    "            \n",
+    "            else:  # MultiOutputClassifier (RandomForest or ExtraTrees)\n",
+    "                # Multi-output: Independent binary classifiers\n",
+    "                multi_output_model = train_multi_output_classifier(\n",
     "                    bert_model=bert_model,\n",
     "                    train_dataloader=train_dataloader,\n",
     "                    device=BASE_CONFIG['device'],\n",
@@ -2947,14 +2952,15 @@
     "                    n_jobs=-1,\n",
     "                    random_state=42\n",
     "                )\n",
-    "            \n",
-    "            # STEP 3: Evaluate\n",
-    "            print(f\"\\n📊 Step 3/3: Evaluating...\")\n",
-    "            test_results = clf_method['eval_func'](\n",
-    "                model=clf_model,\n",
-    "                test_dataloader=test_dataloader,\n",
-    "                label_names=label_names\n",
-    "            )\n",
+    "                \n",
+    "                print(f\"\\n📊 Step 3/3: Evaluating...\")\n",
+    "                test_results = evaluate_multi_output_classifier(\n",
+    "                    multi_output_model=multi_output_model,\n",
+    "                    bert_model=bert_model,\n",
+    "                    test_dataloader=test_dataloader,\n",
+    "                    device=BASE_CONFIG['device'],\n",
+    "                    label_names=label_names\n",
+    "                )\n",
     "        \n",
     "        # Calculate training time\n",
     "        training_time_min = (time.time() - strategy_start_time) / 60\n",
@@ -2962,30 +2968,31 @@
     "        # Store results\n",
     "        all_test_results[strategy_name] = {\n",
     "            'config': f\"{loss_config['display_name']} + {clf_method['display_name']}\",\n",
-    "            'description': f\"{'End-to-end training' if clf_method['name'] in ['attentionxml', 'lightxml'] else 'BERT embeddings'} with {loss_config['display_name']}, classified with {clf_method['display_name']}\",\n",
+    "            'description': f\"Hybrid strategy: {loss_config['display_name']} loss with {clf_method['display_name']}\",\n",
     "            'training_time_min': training_time_min,\n",
     "            'results': test_results\n",
     "        }\n",
     "        \n",
     "        # Display results\n",
     "        print(f\"\\n{'='*80}\")\n",
-    "        print(f\"✅ PART C STRATEGY {strategy_counter} TAMAMLANDI: {strategy_name}\")\n",
+    "        print(f\"✅ PART C STRATEGY {strategy_counter} COMPLETE: {strategy_name}\")\n",
     "        print(f\"⏱️  Training Time: {training_time_min:.2f} minutes\")\n",
     "        print(f\"{'='*80}\")\n",
+    "        \n",
     "        print(f\"\\n📈 Results:\")\n",
     "        for metric, value in test_results.items():\n",
     "            if isinstance(value, (int, float)):\n",
     "                print(f\"   {metric}: {value:.4f}\")\n",
+    "        \n",
     "        print(f\"\\n{'='*80}\\n\")\n",
     "        \n",
+    "        # Increment counter\n",
     "        strategy_counter += 1\n",
     "\n",
     "print(f\"\\n{'='*80}\")\n",
-    "print(f\"✅ TÜM HYBRID STRATEGIES TAMAMLANDI!\")\n",
-    "print(f\"{'='*80}\")\n",
-    "print(f\"\\n📊 Total strategies tested: {strategy_counter - 1}\")\n",
-    "print(f\"💡 Results stored in 'all_test_results' dictionary\")\n",
-    "print(f\"💡 Run 'Results Comparison' cell to see detailed comparison\\n\")"
+    "print(f\"✅ ALL HYBRID STRATEGIES COMPLETE\")\n",
+    "print(f\"   Total strategies tested: {len(loss_configs) * len(classification_methods)}\")\n",
+    "print(f\"{'='*80}\\n\")"
    ]
   },
   {
